# vibe-coding-backend-python

./: .env.example  .env.test.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: clarify.md  implement.md  refactor.md  specify.md
.claude/hooks/: check_architecture.py
.claude/skills/hexagonal-arch/: SKILL.md
scripts/: install-hooks.sh  pre-commit
src/infrastructure/api/: app.py
